--- a/places.html
+++ b/places.html
@@ -27,7 +27,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="tourism.html">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#" onclick="place()">Places</a></li>
         <li><a href="pack.html">Packages</a></li> 
           <li><a href="https://aravindhsiva.github.io/page.html">Contact</a></li>
