--- a/pack.html
+++ b/pack.html
@@ -21,7 +21,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="tourism.html">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="places.html">Places</a></li>
         <li><a href="pack.html" onclick="func()">Packages</a></li> 
         <li><a href="https://aravindhsiva.github.io/page.html">Contact</a></li> 
