--- a/places.html
+++ b/places.html
@@ -34,7 +34,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li onclick="try()"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li onclick="try()"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li onclick="try()"><a href="https://aravindhsiva.github.io/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
